# Diabetes_Classification

./: README.md  pyproject.toml
data/processed/: X_test.csv  X_train_balanced.npy  X_train_original.csv  y_test.csv  y_train_balanced.npy  y_train_original.csv
models/: encoders.pkl  scaler.pkl
models/classification/: logistic_regression.pkl  random_forest.pkl  svm.pkl  xgboost.pkl
models/clustering/: hierarchical_average_model.pkl  hierarchical_ward_model.pkl  kmeans_model.pkl
notebooks/classifiaction/: logestic_regression.ipynb  models_comparision.ipynb  random_forest.ipynb  svm.ipynb  xgboost.ipynb
notebooks/clustering/: hierarchical_average_cluster.ipynb  hierarchical_ward_clustering.ipynb  kmeans_clustering.ipynb  model_comparision.ipynb
notebooks/comparision/: classification_vs_clustering.ipynb
notebooks/data_preprocessing/: data_preprocessing.ipynb
notebooks/data_processing/: data_processing.ipynb
notebooks/eda/: eda.ipynb
notebooks/error_analysis/: error_analysis.ipynb
results/classification_results/: classification_metrics.csv
results/clustering_results/: clustering_metrics.csv
results/eda_results/: eda_cleaned_diabetes_data.csv
